language/move-lang/tests/move_check/expansion/use_function_same_name_as_struct.exp
error: 

   ┌── tests/move_check/expansion/use_function_same_name_as_struct.move:9:17 ───
   │
 9 │     use 0x2::X::u;
   │                 ^ Unused 'use' of alias 'u'. Consider removing it
   │

error: 

    ┌── tests/move_check/expansion/use_function_same_name_as_struct.move:10:12 ───
    │
 10 │     struct u {}
    │            ^ Invalid struct name 'u'. Struct names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/use_function_same_name_as_struct.move:15:22 ───
    │
 15 │     use 0x2::X::u as Bar;
    │                      ^^^ Duplicate module member or alias 'Bar'. Top level names in a namespace must be unique
    ·
 14 │     struct Bar {}
    │            --- Previously defined here
    │

error: 

    ┌── tests/move_check/expansion/use_function_same_name_as_struct.move:15:22 ───
    │
 15 │     use 0x2::X::u as Bar;
    │                      ^^^ Unused 'use' of alias 'Bar'. Consider removing it
    │

